--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body, html {
+    width: 100%;
+    height: 100%;
+    pading: 0;
+    margin: 0;
+}
