Updated angular project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<div #editor class="editor"></div>
+<div class="container">
+    <div #activityBar class="sidebar"></div>
+    <div #sidebar class="sidebar"></div>
+    <div #editor class="editor"></div>
+</div>
